static/css/style.css
@import url("../bootstrap/bootstrap.min.css") layer(bootstrap);

body {
  padding-bottom: 70px;
}

a:focus, button:focus {
  outline: 1px solid var(--bs-primary-text-emphasis);
  box-shadow: 0px 0px 0px 2px var(--bs-body-color);
  transition: none;
}

.issue-with-errors, .title-with-errors {
  background: var(--bs-danger-bg-subtle);
}
.title-with-errors .title-link {
  float: left;
  width: 200px;
}

.issue-with-warnings {
  background: var(--bs-warning-bg-subtle);
}

.issue-error-list {
  background: var(--bs-danger-bg-subtle);
  font-weight: bold;
}

.issue-error-list ul li {
  font-weight: normal;
}

.issue-warning-list {
  background: var(--bs-warning-bg-subtle);
  font-weight: bold;
}

.issue-warning-list ul li {
  font-weight: normal;
}

.issue-new {
  font-style: italic;
}

/* Make all non-nav <a> tags underlined */
a     { text-decoration: underline; }
nav a { text-decoration: none; }

form.actions {
  display: inline-block;
}

.osd-container {
  border: 1px solid black;
  padding: 8px;
}

.osd-toolbar {
  width: 400px;
  height: 35px;
}

.dl-horizontal dt {
  width: 200px;
}

.dl-horizontal dd {
  margin-left: 220px;
}

/* inline lets us force side-by-side elements such as form buttons that are
 * wrapped in other elements, e.g., form tags, divs, etc. */
.inline {
  display: inline-block;
}

.radio-group {
  white-space: nowrap;
}

.radio-group input {
  margin-left: 1em;
}

/* We don't want rights URL table cells wrapping */
td.rights-url {
  white-space: nowrap;
}

/* Skip link that's not ugly */
a.skiplink {
  padding: 6px;
  font-weight: normal;
  position: absolute;
  top: -40px;
  left: 0px;
  color: oklch(95% 0 0);
  border-right: 1px solid white;
  border-bottom: 1px solid white;
  border-bottom-right-radius: 8px;
  background: transparent;
  z-index: 100;
}
a.skiplink:focus {
  position:absolute;
  font-weight: normal;
  left:0px;
  top:0px;
  background: oklch(20% 0.05 267);
  outline:0;
}

/* Tabs that are headings already stand out; they don't need to be absurdly huge */
button[role=tab] h1, button[role=tab] h2, button[role=tab] h3,
button[role=tab] h4, button[role=tab] h5, button[role=tab] h6 {
  font-size: inherit;
  margin: inherit;
}

/* Card headers' headings don't need to be so big */
.card-header {
  h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    margin: inherit;
  }
}

/* Subheadings usually need a top margin, and only need this zero in special cases */
h2, h3, h4, h5, h6 {
  margin-top: 1rem;
}

/* Make status presentation better */
#json-status {
  margin-top: 20px;
  -webkit-transition: color .5s linear, background .5s linear;
  transition: color .5s linear, background .5s linear;
}
#json-status[data-faded=true] {
  color: var(--bs-body-bg);
}

/* Improve alignment of "undo" button on the batch "flag issues" page */
.unflag-form {
  margin-top: 8px;
}

/* Make "copy" buttons a bit more muted */
button.copy {
  --bs-btn-padding-y: 0.1rem;
  --bs-btn-font-size: 0.75rem;
}

